--- a/stock-take-details.html
+++ b/stock-take-details.html
@@ -36,11 +36,11 @@
                 <div class="date-picker-inputs">
                   <div class="date-input-group">
                     <label>Start Date</label>
-                    <input type="text" class="date-input" id="stock-take-start-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="stock-take-start-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                   <div class="date-input-group">
                     <label>End Date</label>
-                    <input type="text" class="date-input" id="stock-take-end-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="stock-take-end-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                 </div>
                 <div class="date-picker-header">
@@ -147,6 +147,7 @@
         initSupabase();
       })();
     </script>
+    <script src="validation.js"></script>
     <script src="dashboard.js"></script>
     <script src="stock-take-details.js"></script>
   </body>
