--- a/forgot-password.html
+++ b/forgot-password.html
@@ -27,6 +27,9 @@
               name="email"
               placeholder="e.g. example@gmail.com"
               required
+              autocomplete="email"
+              maxlength="255"
+              pattern="[^\s@]+@[^\s@]+\.[^\s@]+"
             />
 
             <!-- Request OTP button -->
@@ -41,6 +44,8 @@
               placeholder="Enter OTP code"
               inputmode="numeric"
               required
+              maxlength="6"
+              pattern="\d{4,6}"
             />
 
             <!-- New password -->
@@ -52,6 +57,9 @@
                 name="new-password"
                 placeholder="e.g. new password"
                 required
+                autocomplete="new-password"
+                minlength="6"
+                maxlength="128"
               />
               <button
                 type="button"
@@ -75,6 +83,9 @@
                 name="confirm-password"
                 placeholder="Re-enter new password"
                 required
+                autocomplete="new-password"
+                minlength="6"
+                maxlength="128"
               />
               <button
                 type="button"
@@ -111,6 +122,7 @@
         initSupabase();
       })();
     </script>
+    <script src="validation.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
