--- a/new-po-page.html
+++ b/new-po-page.html
@@ -175,11 +175,11 @@
                   <div class="date-picker-inputs">
                     <div class="date-input-group">
                       <label>Start Date</label>
-                      <input type="text" class="date-input" id="po-start-date-input" placeholder="DD/MM/YYYY" />
-                    </div>
-                    <div class="date-input-group">
-                      <label>End Date</label>
-                      <input type="text" class="date-input" id="po-end-date-input" placeholder="DD/MM/YYYY" />
+                      <input type="text" class="date-input" id="po-start-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
+                  </div>
+                  <div class="date-input-group">
+                    <label>End Date</label>
+                    <input type="text" class="date-input" id="po-end-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                     </div>
                   </div>
                   <div class="date-picker-header">
@@ -346,7 +346,8 @@
               <div class="po-form-group">
                 <label for="po-amount-input">PLEASE ENTER AMOUNT (1 BUNDLE = 12 PIECES) (.REQUIRED)</label>
                 <div class="po-amount-input-wrapper">
-                  <input type="number" id="po-amount-input" class="po-input" placeholder="100" min="1" />
+                  <input type="number" id="po-amount-input" class="po-input" placeholder="100" min="1" max="999999" required />
+                  <span id="po-amount-input-error" class="error-message" style="display: none;"></span>
                   <div class="po-unit-toggle">
                     <button type="button" class="po-unit-btn active" data-unit="pieces">PIECES</button>
                     <button type="button" class="po-unit-btn" data-unit="box">BOX</button>
@@ -374,7 +375,8 @@
               <!-- Remarks -->
               <div class="po-form-group">
                 <label for="po-remarks-textarea">PLEASE ENTER REMARKS (OPTIONAL)</label>
-                <textarea id="po-remarks-textarea" class="po-input po-textarea" rows="4" placeholder="Additional notes or comments..."></textarea>
+                <textarea id="po-remarks-textarea" class="po-input po-textarea" rows="4" placeholder="Additional notes or comments..." maxlength="1000"></textarea>
+                <span id="po-remarks-textarea-error" class="error-message" style="display: none;"></span>
               </div>
 
               <!-- Add to Draft Button -->
@@ -639,6 +641,7 @@
       </div>
     </div>
 
+    <script src="validation.js"></script>
     <script src="dashboard.js"></script>
   </body>
 </html>
