--- a/sign-up.html
+++ b/sign-up.html
@@ -33,6 +33,10 @@
               name="username"
               placeholder="e.g. john_doe"
               required
+              autocomplete="username"
+              minlength="3"
+              maxlength="30"
+              pattern="[a-zA-Z0-9_]{3,30}"
             />
             <span id="username-error" class="error-message" style="display: none;"></span>
 
@@ -44,6 +48,9 @@
               name="business-name"
               placeholder="e.g. ABC Sports Store"
               required
+              autocomplete="organization"
+              minlength="2"
+              maxlength="100"
             />
             <span id="business-name-error" class="error-message" style="display: none;"></span>
 
@@ -55,6 +62,9 @@
               name="business-email"
               placeholder="e.g. contact@abcsports.com"
               required
+              autocomplete="email"
+              maxlength="255"
+              pattern="[^\s@]+@[^\s@]+\.[^\s@]+"
             />
             <span id="business-email-error" class="error-message" style="display: none;"></span>
 
@@ -66,6 +76,9 @@
               name="business-contact"
               placeholder="e.g. 0123456789"
               required
+              autocomplete="tel"
+              maxlength="15"
+              pattern="(\+?60|0)?[1-9]\d{8,9}"
             />
             <span id="business-contact-error" class="error-message" style="display: none;"></span>
 
@@ -78,6 +91,9 @@
                 name="password"
                 placeholder="e.g. your password"
                 required
+                autocomplete="new-password"
+                minlength="6"
+                maxlength="128"
               />
               <button
                 type="button"
@@ -102,6 +118,9 @@
                 name="confirm-password"
                 placeholder="e.g. re-enter your password"
                 required
+                autocomplete="new-password"
+                minlength="6"
+                maxlength="128"
               />
               <button
                 type="button"
@@ -125,6 +144,8 @@
               name="business-ssm"
               placeholder="e.g. SSM123456789"
               required
+              maxlength="20"
+              pattern="[A-Z]{1,3}\d{6,10}[A-Z]?"
             />
             <span id="business-ssm-error" class="error-message" style="display: none;"></span>
           </div>
@@ -151,6 +172,7 @@
         initSupabase();
       })();
     </script>
+    <script src="validation.js"></script>
     <script src="script.js"></script>
     <script>
       /* ============================================
