--- a/statistic-page.html
+++ b/statistic-page.html
@@ -166,11 +166,11 @@
                 <div class="date-picker-inputs">
                   <div class="date-input-group">
                     <label>Start Date</label>
-                    <input type="text" class="date-input" id="statistic-start-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="statistic-start-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                   <div class="date-input-group">
                     <label>End Date</label>
-                    <input type="text" class="date-input" id="statistic-end-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="statistic-end-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                 </div>
                 <div class="date-picker-header">
@@ -270,6 +270,25 @@
         initSupabase();
       })();
     </script>
+    <!-- Sales Breakdown Popup -->
+    <div class="edit-position-popup" id="sales-breakdown-popup" style="display: none;">
+      <div class="edit-position-dialog" style="max-width: 1200px; width: 95vw;">
+        <button type="button" class="back-button" id="close-sales-breakdown-btn" aria-label="Close">
+          <img src="image/sn_back_icon.png" alt="Back" />
+        </button>
+        <div class="developer-page-title" style="display: flex; justify-content: space-between; align-items: center; gap: 1rem;">
+          <h1 id="sales-breakdown-title" style="flex: 1;">SALES BREAKDOWN</h1>
+          <button type="button" class="supplier-action-btn" id="export-sales-breakdown-pdf-btn" style="flex: 0 0 auto; margin: 0; padding: 0.5rem 1rem; font-size: 0.9rem; min-width: auto; background: #9D5858; color: #ffffff;">EXPORT PDF</button>
+        </div>
+        <div class="payment-invoice-content-wrapper">
+          <div class="payment-invoice-content" id="sales-breakdown-content">
+            <!-- Sales breakdown content will be loaded here -->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="validation.js"></script>
     <script src="dashboard.js"></script>
     <script src="statistic-page.js"></script>
   </body>
