--- a/supplier-po-management.html
+++ b/supplier-po-management.html
@@ -100,11 +100,11 @@
                 <div class="date-picker-inputs">
                   <div class="date-input-group">
                     <label>Start Date</label>
-                    <input type="text" class="date-input" id="supplier-start-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="supplier-start-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                   <div class="date-input-group">
                     <label>End Date</label>
-                    <input type="text" class="date-input" id="supplier-end-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="supplier-end-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                 </div>
                 <div class="date-picker-header">
@@ -199,11 +199,11 @@
                 <div class="date-picker-inputs">
                   <div class="date-input-group">
                     <label>Start Date</label>
-                    <input type="text" class="date-input" id="supplier-payment-start-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="supplier-payment-start-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                   <div class="date-input-group">
                     <label>End Date</label>
-                    <input type="text" class="date-input" id="supplier-payment-end-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="supplier-payment-end-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                 </div>
                 <div class="date-picker-header">
@@ -297,11 +297,11 @@
                 <div class="date-picker-inputs">
                   <div class="date-input-group">
                     <label>Start Date</label>
-                    <input type="text" class="date-input" id="supplier-history-start-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="supplier-history-start-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                   <div class="date-input-group">
                     <label>End Date</label>
-                    <input type="text" class="date-input" id="supplier-history-end-date-input" placeholder="DD/MM/YYYY" />
+                    <input type="text" class="date-input" id="supplier-history-end-date-input" placeholder="DD/MM/YYYY" pattern="\d{2}/\d{2}/\d{4}" maxlength="10" />
                   </div>
                 </div>
                 <div class="date-picker-header">
@@ -561,6 +561,7 @@
       </div>
     </div>
 
+    <script src="validation.js"></script>
     <script src="dashboard.js"></script>
   </body>
 </html>
