po order page's image load out proble mfixed

--- a/new-po-page.html
+++ b/new-po-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://giksmtowehwmgqyymevp.supabase.co https://cdn.jsdelivr.net; connect-src 'self' https://giksmtowehwmgqyymevp.supabase.co wss://giksmtowehwmgqyymevp.supabase.co https://*.supabase.co wss://*.supabase.co https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob:; frame-src 'self' https://www.paypal.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://giksmtowehwmgqyymevp.supabase.co https://cdn.jsdelivr.net; connect-src 'self' https://giksmtowehwmgqyymevp.supabase.co wss://giksmtowehwmgqyymevp.supabase.co https://*.supabase.co wss://*.supabase.co https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https://giksmtowehwmgqyymevp.supabase.co https://*.supabase.co; frame-src 'self' https://www.paypal.com;">
     <title>Sport Nexus - Inventory Purchase</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="dashboard.css" />
