--- a/supplier-history.html
+++ b/supplier-history.html
@@ -78,6 +78,7 @@
               <div class="status-submenu" id="supplier-status-submenu">
                 <button class="status-option-btn" data-status="all">ALL STATUS</button>
                 <button class="status-option-btn" data-status="completed">COMPLETED</button>
+                <button class="status-option-btn" data-status="cancelled">CANCELLED</button>
               </div>
             </div>
             <div class="date-btn-wrapper">
