--- a/user-member.html
+++ b/user-member.html
@@ -298,7 +298,7 @@
           </div>
           <div class="edit-user-field-group" id="add-user-points-group">
             <label for="add-user-points">MEMBER POINTS</label>
-            <input type="number" id="add-user-points" class="edit-user-input" placeholder="Enter points" value="0" min="0" max="999999" />
+            <input type="number" id="add-user-points" class="edit-user-input" placeholder="Enter points" value="0" min="0" max="999999" disabled readonly />
             <span id="add-user-points-error" class="error-message" style="display: none;"></span>
           </div>
           <div class="edit-user-field-group">
